# cranelift-jit-demo

./: Cargo.toml  README.md  pyproject.toml  run_tests.sh
python_examples/: README.md  example.py  simple_example.py  stress_test.py  test_bindings.py
src/: lib.rs  python.rs
tests/: test_python_bindings.rs
